test/Fail/LargeIndicesWithoutK.err
LargeIndicesWithoutK.agda:5.3-6: error: [ConstructorDoesNotFitInData]
Constructor [_]
of sort Set a
does not fit into data type of sort Set.
(Reason: Set a is not less or equal than Set)
when checking that the type A of an argument to the constructor [_]
fits in the sort Set of the datatype.

LargeIndicesWithoutK.agda:4.6-15: error: [NotLeqSort]
Set a is not less or equal than Set
when checking the definition of Singleton
